FullQa New/src/objects/Postal_Code__c.object
<CustomObject>
    <fields>
        <fullName>IsComplete__c</fullName>
        <formula>IF(

(OR(
ISBLANK(Maximum_Price_Per_Month__c),
ISBLANK(Returns_Per_Year__c),
ISBLANK(Tax_Rate__c)
)), 

False, 

True)</formula>
        <label>IsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Price_Per_Month__c</fullName>
        <label>Maximum Price Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MyLodge_Id__c</fullName>
        <externalId>true</externalId>
        <label>MyLodge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Per_Year__c</fullName>
        <label>Returns Per Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>17</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Postal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Maximum_Price_Per_Month__c</columns>
        <columns>Returns_Per_Year__c</columns>
        <columns>Tax_Rate__c</columns>
        <columns>IsComplete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllIncomplete</fullName>
        <columns>NAME</columns>
        <columns>Maximum_Price_Per_Month__c</columns>
        <columns>Returns_Per_Year__c</columns>
        <columns>Tax_Rate__c</columns>
        <columns>IsComplete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsComplete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All - Incomplete</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Postal Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>